<resources>
    <string name="app_name">Meu Fut</string>
    <string name="futs">Futs</string>
    <string name="jogadores">Jogadores</string>
    <string name="add">Add</string>
    <string name="local">Local</string>
    <string name="valor_avulso">Preço para avulso</string>
    <string name="valor_mensal">Preço para mensalista</string>
    <string name="remover">Remover</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="nome">Nome</string>
    <string name="o_jogador_mensalista">O jogador é mensalista</string>
    <string name="padrao_do_fut">Valor padrão do Fut</string>
    <string name="data">Data</string>
    <string name="dd_mm_yyyy">01/01/2021</string>
    <string name="adicionar_a_um_evento">Adicionar a um evento</string>
    <string name="insira_o_valor">Insira o valor</string>
    <string name="remover_do_evento">Remover do Evento</string>
    <string name="confirmar_pagamento_dos_mensalistas">Confirmar pagamento dos mensalistas</string>
    <string name="nullString" />
    <string name="previsao_de_ganhos">Previsão de ganhos com avulsos:</string>
    <string name="ganho_obtido">Ganho obtido com avulsos:</string>
    <string name="jogadores_no_evento">Jogadores no evento:</string>
    <string name="jogadores_pagos">Jogadores pagos:</string>
    <string name="data2">Data:</string>
    <string name="horario2">Horário:</string>
    <string name="pago">PAGO</string>
    <string name="nao_pago">NÃO PAGO</string>
    <string name="mudar_status">Mudar status</string>
    <string name="adicionar_jogador">Adicionar Jogador</string>
    <string name="adicionar_ao_evento_solicitado">Adicionar ao evento solicitado</string>
    <string name="finalizar_evento">Finalizar evento</string>
    <string name="status_do_evento">Status do evento:</string>
    <string name="fut_mensal">Fut mensal</string>
    <string name="aluguel_da_quadra_ou_mensalidade">Aluguel da quadra (ou mensalidade)</string>
    <string name="dia_da_semana">Dia da semana:</string>
    <string name="domingo">Domingo</string>
    <string name="segunda">Segunda</string>
    <string name="ter_a">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="s_bado">Sábado</string>
    <string name="jogadores_">Jogadores:</string>
    <string name="mensalistas_">Mensalistas:</string>
    <string name="ganho_com_mensalistas">Ganho com mensalistas:</string>
    <string name="preco_da_quadra">Preço da quadra:</string>
    <string name="lucro_prejuizo">Lucro/Prejuízo (Sem os avulsos):</string>
    <string name="separacao">-</string>
    <string name="padrao_avulso">Padrão avulso</string>
    <string name="padrao_mensalista">Padrão mensalista</string>
    <string name="abrir_eventos_deste_fut">Abrir eventos deste fut</string>
    <string name="eventos_presentes_como_avulso">Eventos presente como avulso:</string>
    <string name="eventos_presente_como_mensalista">Eventos presente como mensalista:</string>
    <string name="informa_es_sobre_o_jogador"><b>Informações sobre o jogador</b></string>
    <string name="calotes_dados">Calotes dados:</string>
    <string name="horario">Horário</string>
    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="mar_o">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>
    <string name="ativo">Ativo</string>
    <string name="refer_ncia_m_s_ano">Referência mês/ano:</string>
    <string name="dados_mensal">Dados do mensal:</string>
    <string name="preco_mensal_da_quadra">Preço mensal da quadra:</string>
    <string name="total_obtido_com_avulsos">Total obtido com avulsos:</string>
    <string name="mostrar_dados_mensal">Mostrar dados mensal</string>
    <string name="n_de_jogadores_diferentes">Nº de jogadores diferentes:</string>
    <string name="calotes_recebidos">Calotes recebidos:</string>
    <string name="total_obtido_com_mensalistas">Total obtido com mensalistas:</string>
    <string name="este_campo_n_o_poder_ser_modificado_posteriormente">Este campo não poderá ser modificado posteriormente !</string>
    <string name="arquivar_evento">Arquivar evento</string>
    <string name="deletar_este_fut">Deletar este fut</string>
    <string name="deletar_evento">Deletar evento</string>
    <string name="mostrar_eventos_arquivados">Exibir arquivados</string>
    <string name="desarquivar_evento">Desarquivar evento</string>
    <string name="finalizar_e_arquivar">Finalizar e arquivar</string>
    <string name="jogador_furou">Marca/Desmarca como faltante</string>
    <string name="furou">FUROU</string>
    <string name="vezes_que_furaram">Vezes que furaram:</string>
    <string name="ganho_com_avulsos">Ganho com avulsos:</string>
    <string name="pre_o_da_quadra">Preço da quadra:</string>
    <string name="_00_00">00:00</string>
    <string name="copiar_para_outro_fut">Copiar para outro fut</string>
    <string name="copiar_jogadores">Copiar jogadores</string>
    <string name="apagar_tudo">Apagar tudo</string>
    <string name="entrar">Entrar</string>
    <string name="vezes_que_furou">Vezes que furou:</string>
    <string name="tipo">Tipo</string>
    <string name="obter_novo_fut">Obter novo Fut</string>
    <string name="novos_futs_disponiveis">Novos Futs:</string>
    <string name="jogadores_disponiveis">Novos jogadores:</string>
    <string name="novos_eventos">Novos eventos:</string>
    <string name="novos_arquivamentos">Novos arquivamentos:</string>
    <string name="selecionar_todos">Selecionar todos</string>
    <string name="icone_meu_fut">Icone Meu Fut</string>
    <string name="meu_fut">Meu Fut</string>
    <string name="preco_para_avulso_rs">Preço para avulso (R$):</string>
    <string name="preco_para_mensalista_rs">Preço para mensalista (R$):</string>
    <string name="aluguel_da_quadra_rs">Aluguel da quadra (R$):</string>

</resources>