<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HomePageActivity"
    android:background="@color/black">

    <com.google.android.gms.ads.AdView
        android:id="@+id/activity_home_page_banner_topo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7406067620829259/6135279617"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meu_fut"
        android:textSize="50sp"
        android:textColor="#6ED616"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_home_page_banner_topo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_action_soccer_green"
        app:layout_constraintBottom_toTopOf="@+id/activity_home_page_banner_base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_home_page_banner_topo"
        android:contentDescription="@string/icone_meu_fut" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_homepage_button_entrar"
        android:accessibilityPaneTitle="@string/entrar"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:background="#6ED616"
        android:text="@string/entrar"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_home_page_banner_base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.62" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/activity_home_page_banner_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7406067620829259/5895961683"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>